# seance

./: .env.macos-signing.example  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  agents.md
.github/actions/setup-zig/: action.yml
.github/workflows/: ci.yml  release.yml
crates/seance-app/: Cargo.toml
crates/seance-app/src/: diagnostics.rs  main.rs
crates/seance-build/: Cargo.toml
crates/seance-build/src/: artifacts.rs  changelog.rs  main.rs  manifest.rs  sparkle.rs  workspace.rs
crates/seance-config/: Cargo.toml
crates/seance-config/src/: defaults.rs  keybindings.rs  lib.rs  model.rs  storage.rs  validation.rs
crates/seance-core/: Cargo.toml
crates/seance-core/src/: lib.rs  session_logs.rs  tunnels.rs
crates/seance-observability/: Cargo.toml
crates/seance-observability/src/: lib.rs
crates/seance-platform/: Cargo.toml
crates/seance-platform-linux/: Cargo.toml
crates/seance-platform-linux/src/: lib.rs
crates/seance-platform-macos/: Cargo.toml  build.rs
crates/seance-platform-macos/src/: dock_icon.rs  dock_icon_bridge.m  lib.rs  promotion.rs  promotion_bridge.m  sparkle_bridge.m
crates/seance-platform/src/: lib.rs
crates/seance-ssh/: Cargo.toml
crates/seance-ssh/src/: auth.rs  backend.rs  lib.rs  manager.rs  model.rs  proxy.rs  session.rs  sftp.rs  tunnel.rs
crates/seance-sync-protocol/: Cargo.toml
crates/seance-sync-protocol/src/: lib.rs  model.rs
crates/seance-terminal/: Cargo.toml
crates/seance-terminal/src/: history.rs  input.rs  lib.rs  local.rs  model.rs  publish_budget.rs  render.rs  state.rs  turns.rs  viewport.rs
crates/seance-ui/: Cargo.toml
crates/seance-ui/src/: actions.rs  app.rs  backend.rs  connect.rs  forms.rs  frame_pacer.rs  hosts.rs  keybindings.rs  lib.rs  model.rs  palette.rs  perf.rs  perf_runtime.rs  secure.rs  sessions.rs  settings.rs  sftp.rs  surface.rs  terminal_input.rs  terminal_links.rs  terminal_paint.rs  terminal_runtime.rs  terminal_scrollbar.rs  text_input.rs  theme.rs  tunnels.rs  ui_components.rs  vault.rs  workspace.rs  workspace_render.rs  workspace_scroll.rs
crates/seance-ui/src/secure/: credentials.rs  host_wizard.rs  hosts.rs  import_keys.rs  keys.rs  mod.rs  shared.rs
crates/seance-updater/: Cargo.toml
crates/seance-updater/src/: lib.rs
crates/seance-vault/: Cargo.toml
crates/seance-vault/src/: crypto.rs  device_store.rs  kdf.rs  lib.rs  model.rs  storage.rs
crates/seance-vault/src/device_store/: macos.rs
docs/: RELEASE-RUNBOOK.md  RELEASE.md  VAULT-MULTIPLAYER-ARCHITECTURE.md  VAULT-SYNC-ARCHITECTURE.md  VAULT-SYNC-DATA-MODEL.md  VAULT-SYNC-PROTOCOL.md  VAULT-SYNC-RUNBOOK.md  VAULT-SYNC-THREAT-MODEL.md  perf-scroll.md
packaging/linux/: AppRun  seance.appdata.xml  seance.desktop
packaging/macos/: Info.plist  Seance.entitlements.plist.in
scripts/: build-appimage.sh  build-macos-release.sh  macos-app-common.sh  run-macos-signed-dev.sh
services/seance-sync/: README.md  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
services/seance-sync/migrations/d1/: 0001_initial.sql
services/seance-sync/src/: index.ts
services/seance-sync/src/durable/: room-authority.ts  vault-authority.ts
services/seance-sync/src/lib/: auth.ts  crypto.ts  db.ts  http.ts  r2.ts
site/sparkle/stable/: appcast.xml
