[package]
name = "seance-app"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
seance-core = { path = "../seance-core" }
seance-platform = { path = "../seance-platform" }
seance-ui = { path = "../seance-ui" }
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
seance-platform-macos = { path = "../seance-platform-macos" }

[package.metadata.packager]
product_name = "Seance"
identifier = "com.seance.app"
before-packaging-command = "cargo build --release -p seance-app"
out_dir = "../../dist/packager"
formats = ["app", "dmg"]
