[package]
name = "seance-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
seance-config = { path = "../seance-config" }
seance-ssh = { path = "../seance-ssh" }
seance-terminal = { path = "../seance-terminal" }
seance-vault = { path = "../seance-vault" }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"
