[package]
name = "seance-core"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
dirs = "6.0"
seance-config = { path = "../seance-config" }
seance-ssh = { path = "../seance-ssh" }
seance-terminal = { path = "../seance-terminal" }
seance-updater = { path = "../seance-updater" }
seance-vault = { path = "../seance-vault" }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"
