[package]
name = "seance-platform-macos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
gpui = "0.2.2"
seance-core = { path = "../seance-core" }
seance-platform = { path = "../seance-platform" }
seance-ui = { path = "../seance-ui" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
seance-vault = { path = "../seance-vault" }
tempfile = "3.14"
