[package]
name = "seance-platform-macos"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
gpui = "0.2.2"
seance-core = { path = "../seance-core" }
seance-platform = { path = "../seance-platform" }
seance-ui = { path = "../seance-ui" }
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
seance-vault = { path = "../seance-vault" }
tempfile = "3.14"
