[package]
name = "seance-platform"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
fs2 = "0.4"
open = "5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seance-core = { path = "../seance-core" }
tracing = "0.1"
