[package]
name = "seance-ssh"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
russh = { version = "0.60.0", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.1.1"
seance-terminal = { path = "../seance-terminal" }
ssh-key = { version = "0.7.0-rc.9", features = ["ed25519", "rsa", "std", "encryption"] }
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "io-util"] }
tracing = "0.1"
