[package]
name = "seance-ui"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
dirs = "6.0"
gpui = "0.2.2"
seance-config = { path = "../seance-config" }
seance-core = { path = "../seance-core" }
seance-platform = { path = "../seance-platform" }
seance-ssh = { path = "../seance-ssh" }
seance-terminal = { path = "../seance-terminal" }
seance-vault = { path = "../seance-vault" }
serde_json = "1.0"
tracing = "0.1"
zeroize = "1.8"

[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
