[package]
name = "seance-updater"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.20"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
