[package]
name = "seance-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
keyring = { version = "3.6", features = ["apple-native", "linux-native", "windows-native"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3.14"
