[package]
name = "seance-vault"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
getrandom = "0.3"
keyring = { version = "3.6", features = ["apple-native", "linux-native", "windows-native"] }
rand = "0.8"
rand_core = "0.10"
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh-key = { version = "0.7.0-rc.9", features = ["ed25519", "rsa", "std", "encryption"] }
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework = { version = "3.7", features = ["OSX_10_15"] }
security-framework-sys = "2.17"

[dev-dependencies]
tempfile = "3.14"
